rhcl/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-pages-gateway
  namespace: test-pages
spec:
  gatewayClassName: kuadrant-gateway-class
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: HTTPRoute
        group: gateway.networking.k8s.io
