rhcl/unified-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mockweb-route
  namespace: test-pages
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-auth-gateway
      namespace: test-pages
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: mockrhcltestapp-git
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /pagea
    - backendRefs:
        - group: ''
          kind: Service
          name: mockrhcltestapp-git
          port: 8080
          weight: 1
      filters:
        - responseHeaderModifier:
            add:
              - name: Content-Type
                value: application/json
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /pageb
